# ur_visual_servo

./: CMakeLists.txt  README.md  package.xml
config/: color_seg.cfg  config.yaml  training_logger.yaml
include/: Jacobian_updater.hpp  gradient_updater.hpp  image_capturer.hpp  pixel_picker.hpp  tool_detector.hpp  visual_servo_controller.hpp
launch/: params.launch
src/: Jacobian_updater.cpp  async_move_test.cpp  auto_exp.cpp  cv_detection_test.cpp  gradient_updater.cpp  image_capturer.cpp  label_target_publisher.cpp  pixel_picker.cpp  robot_homing.cpp  set_home_position.cpp  target_publisher.cpp  tool_detector.cpp  update_image_J.cpp  update_ori_gradient.cpp  visual_servo_controller.cpp  visual_servo_full_pose_test.cpp  visual_servo_orientation_test.cpp  visual_servo_position_test.cpp
src/color_picker/: color_analyzer.py  pixel_picker.py
